<resources>
    <string name="app_name">AutoMarket</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Izlogujte se</string>

    <string name="nav_all_ads">Svi oglasi</string>
    <string name="nav_search">Pretraga oglasa</string>
    <string name="nav_login">Login</string>
    <string name="nav_registration">Registracija</string>
    <string name="nav_create_ad">Kreiranje oglasa</string>
    <string name="nav_users_ads">Vaši oglasi</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_following_ads">Oglasi koje pratite</string>

    <string name="error">Greška</string>
    <string name="errorMessage">Došlo je do greške. Ponovo pokrenite aplikaciju.</string>
    <string name="ok">OK</string>

    <string name="generalInformationTextView">Opšte informacije</string>
    <string name="brandTextView">Brend</string>
    <string name="modelTextView">Model</string>
    <string name="yearTextView">Godina proizvodnje</string>
    <string name="conditionTextView">Stanje</string>
    <string name="additionalInfoTextView">Dodatne informacije</string>
    <string name="mileageTextView">Kilometraža</string>
    <string name="fuelTextView">Tip goriva</string>
    <string name="hpTextView">KS</string>
    <string name="kwTextView">KW</string>
    <string name="cubicTextView">Kubikaža</string>
    <string name="transmissionTextView">Vrsta menjača</string>
    <string name="locationTextView">Lokacija</string>
    <string name="cityTextView">Grad</string>
    <string name="countryTextView">Drzava</string>
    <string name="descriptionTextView">Opis</string>
    <string name="priceTextView">Cena: </string>
    <string name="driveTextView">Tip pogona</string>
    <string name="doorNumberTextView">Broj vrata</string>
    <string name="seatsNumberTextView">Broj sedišta</string>
    <string name="wheelSideTextView">Strana volana</string>
    <string name="airConditioningTextView">Tip klime</string>
    <string name="colorTextView">Boja</string>
    <string name="interiorColorTextView">Boja enterijera</string>
    <string name="registeredUntilTextView">Registrovan do</string>
    <string name="phoneNumberTextView">Broj telefona</string>
    <string name="firstNameTextView">Ime: %s</string>
    <string name="lastNameTextView">Prezime: %s</string>
    <string name="emailTextView">Email: %s</string>
    <string name="usernameTextView">Username: %s</string>

    <string name="km">%1$d km</string>
    <string name="year">%1$d. godina</string>
    <string name="ks">%1$d ks</string>
    <string name="kw">%1$d kw</string>
    <string name="cubic">%1$d cm³</string>
    <string name="price">%1$d €</string>

    <string name="sortByYearDesc">Godini proizvodnje opadajuće</string>
    <string name="sortByYearAsc">Godini proizvodnje rastuće</string>
    <string name="sortByPriceDesc">Ceni opadajuće</string>
    <string name="sortByPriceAsc">Ceni rastuće</string>
    <string name="sortByMileageDesc">Kilometraži opadajuće</string>
    <string name="sortByMileageAsc">Kilometraži rastuće</string>
    <string name="sortByPostedDateDesc">Datumu postavljanja opadajuće</string>
    <string name="sortByPostedDateAsc">Datumu postavljanja rastuće</string>
    <string name="basicSort">Osnovno</string>

    <string name="registration">Registracija</string>
    <string name="firstName">Ime</string>
    <string name="lastName">Prezime</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Šifra</string>
    <string name="repeatedPassword">Ponovite šifru</string>

    <string name="loginHint">Vec imate nalog? Ulogujte se!</string>
    <string name="login">Uloguj se</string>

    <string name="modelHint">Naziv modela</string>
    <string name="priceHint">Cena</string>
    <string name="mileageHint">Kilometraža</string>
    <string name="cubicHint">Kubikaža</string>
    <string name="hpHint">Snaga KS</string>
    <string name="kwHint">Snaga kW</string>
    <string name="registeredUntilHint">Trajanje registracije (format 01.2024)</string>
    <string name="cityHint">Grad</string>
    <string name="countryHint">Država</string>
    <string name="phoneNumberHint">Broj telefona</string>
    <string name="createAdHint">Kreiraj oglas</string>
    <string name="createAdTitle">Kreiranje oglasa</string>
    <string name="addImage">Dodaj sliku</string>
    <string name="carBodyHint">Tip karoserije</string>
    <string name="changeUserData">Izmenite podatke</string>
    <string name="changeAdTitle">Izmenite oglas</string>
    <string name="changeAdHint">Sačuvaj izmene</string>
    <string name="minPriceText">Min cena</string>
    <string name="maxPriceText">Max cena</string>
    <string name="minMileageText">Min kilometraža</string>
    <string name="maxMileageText">Max kilometraža</string>
    <string name="minEngineCubicText">Min kubikaža</string>
    <string name="maxEngineCubicText">Max kubikaža</string>
    <string name="minHPText">Min KS</string>
    <string name="maxHPText">Max KS</string>
    <string name="minKWText">Min KW</string>
    <string name="maxKWText">Max KW</string>
    <string name="minYearHint">Min god</string>
    <string name="maxYearHint">Max god</string>

    <string-array name="brands">
        <item></item>
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Buick</item>
        <item>Chery</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Dodge</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lada</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Lincoln</item>
        <item>Lotus</item>
        <item>Mahindra</item>
        <item>Maserati</item>
        <item>Mazda</item>
        <item>Mercedes</item>
        <item>MINI</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Oldtimer</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Plymouth</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Seat</item>
        <item>Smart</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tata</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item>Zastava</item>
    </string-array>

    <string-array name="years">
        <item></item>
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
    </string-array>

    <string-array name="car_conditions">
        <item></item>
        <item>Novo</item>
        <item>Polovno</item>
        <item>Oštećeno</item>
        <item>Oldtimer</item>
        <item>Restaurirano</item>
    </string-array>

    <string-array name="fuel_type">
        <item></item>
        <item>Benzin</item>
        <item>Dizel</item>
        <item>Benzin + Gas (TNG)</item>
        <item>Benzin + Metan (CNG)</item>
        <item>Električni pogon</item>
        <item>Hibridni pogon</item>
    </string-array>

    <string-array name="transmission">
        <item></item>
        <item>Manuelni 4 brzine</item>
        <item>Manuelni 5 brzina</item>
        <item>Manuelni 6 brzina</item>
        <item>Automatski / poluautomatski</item>
    </string-array>

    <string-array name="drive">
        <item></item>
        <item>Prednji</item>
        <item>Zadnji</item>
        <item>4x4</item>
    </string-array>

    <string-array name="doors_number">
        <item></item>
        <item>3</item>
        <item>5</item>
    </string-array>

    <string-array name="seats_number">
        <item></item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>7</item>
    </string-array>

    <string-array name="wheel_side">
        <item></item>
        <item>Leva</item>
        <item>Desna</item>
    </string-array>

    <string-array name="air_conditioning">
        <item></item>
        <item>Nema klime</item>
        <item>Manuelna klima</item>
        <item>Automatska klima</item>
    </string-array>

    <string-array name="colors">
        <item></item>
        <item>Bela</item>
        <item>Crna</item>
        <item>Siva</item>
        <item>Crvena</item>
        <item>Kameleon</item>
        <item>Plava</item>
        <item>Zelena</item>
        <item>Žuta</item>
        <item>Narandžasta</item>
        <item>Ljubičasta</item>
        <item>Smeđa</item>
        <item>Teget</item>
        <item>Zlatna</item>
        <item>Srebrna</item>
        <item>Bordo</item>
        <item>Tirkizna</item>
        <item>Roze</item>
        <item>Bež</item>
    </string-array>

    <string-array name="interior_colors">
        <item></item>
        <item>Bež</item>
        <item>Crna</item>
        <item>Siva</item>
        <item>Smeđa</item>
        <item>Druga</item>
    </string-array>

    <string-array name="car_body">
        <item></item>
        <item>Limunzina</item>
        <item>Hečbek</item>
        <item>Karavan</item>
        <item>Kupe</item>
        <item>Kabriolet/Readster</item>
        <item>Monovolumen (MiniVan)</item>
        <item>Džip/SUV</item>
        <item>Pick up</item>
    </string-array>

</resources>