<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.NavigationActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_ads"
            android:title="@string/nav_all_ads"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search"/>
        <item
            android:id="@+id/nav_login"
            android:title="@string/nav_login"/>
        <item
            android:id="@+id/nav_registration"
            android:title="@string/nav_registration"/>
        <item
            android:id="@+id/nav_create_ad"
            android:title="@string/nav_create_ad"/>
        <item
            android:id="@+id/nav_users_ads"
            android:title="@string/nav_users_ads"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_following_ads"
            android:title="@string/nav_following_ads"/>

    </group>

</menu>