<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.adDetails.AdDetailsFragment"
    android:layout_marginBottom="10dp">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ProgressBar
           android:id="@+id/adDetailsProgressBar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:visibility="gone"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>

       <androidx.viewpager2.widget.ViewPager2
           android:id="@+id/imageViewPager"
           android:layout_width="match_parent"
           android:layout_height="300dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="60dp"/>

       <TextView
           android:id="@+id/generalInformationTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/generalInformationTextView"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/adDetailPriceTextView"
           android:layout_marginTop="10dp"
           android:textStyle="bold"
           android:textSize="18sp"/>

       <TextView
           android:id="@+id/adDetailBrandTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/generalInformationTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="10dp"/>

       <TextView
           android:id="@+id/adDetailModelTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adDetailBrandTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adDetailYearTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adDetailModelTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adDetailPriceTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/imageViewPager"
           app:layout_constraintStart_toEndOf="@+id/priceTextView"
           app:layout_constraintEnd_toEndOf="parent"
           android:textSize="18sp"
           android:textStyle="bold"/>

       <TextView
           android:id="@+id/priceTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/imageViewPager"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toStartOf="@id/adDetailPriceTextView"
           android:textSize="18sp"
           android:textStyle="bold"
           android:text="@string/priceTextView"
           app:layout_constraintHorizontal_chainStyle="packed"
           app:layout_constraintHorizontal_bias="0.5" />


       <TextView
           android:id="@+id/adDetailConditionTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adDetailYearTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/additionalInfoTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/additionalInfoTextView"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/adDetailConditionTextView"
           android:layout_marginTop="15dp"
           android:textStyle="bold"
           android:textSize="18sp"/>

       <TextView
           android:id="@+id/adDetailMileageTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/additionalInfoTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adEngineTypeDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adDetailMileageTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adHpDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adEngineTypeDetailTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adKwDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adHpDetailTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adCubicDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adKwDetailTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adTransmissionDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adCubicDetailTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/adCityDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/locationTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="10dp"/>

       <TextView
           android:id="@+id/adCountryDetailTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adCityDetailTextView"
           android:layout_marginEnd="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/brandTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="10dp"
           android:text="@string/brandTextView"
           android:layout_marginStart="20dp"
           app:layout_constraintTop_toBottomOf="@+id/generalInformationTextView"/>

       <TextView
           android:id="@+id/modelTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/brandTextView"
           android:text="@string/modelTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/yearTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/modelTextView"
           android:text="@string/yearTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/conditionTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/yearTextView"
           android:text="@string/conditionTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/mileageTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/additionalInfoTextView"
           android:text="@string/mileageTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/engineTypeTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/mileageTextView"
           android:text="@string/engineTypeTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/hpTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/engineTypeTextView"
           android:text="@string/hpTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/kwTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/adHpDetailTextView"
           android:text="@string/kwTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/cubicTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/kwTextView"
           android:text="@string/cubicTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/transmissionTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/cubicTextView"
           android:text="@string/transmissionTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/cityTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/locationTextView"
           android:text="@string/cityTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="10dp"/>

       <TextView
           android:id="@+id/countryTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/cityTextView"
           android:text="@string/countryTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="5dp"/>

       <TextView
           android:id="@+id/locationTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/locationTextView"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/adTransmissionDetailTextView"
           android:layout_marginTop="15dp"
           android:textStyle="bold"
           android:textSize="18sp"/>

       <TextView
           android:id="@+id/descriptionTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/descriptionTextView"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/adCountryDetailTextView"
           android:layout_marginTop="15dp"
           android:textStyle="bold"
           android:textSize="18sp"/>

       <TextView
           android:id="@+id/adDetailDescriptionTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
           android:layout_marginStart="20dp"
           android:layout_marginTop="10dp"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>